changed file build not using eclipse compiler